# de-recipe-book

./: .firebaserc  .gitignore  README.md  firebase.json  mkdocs.yml  pyproject.toml
.firebase/: hosting.c2l0ZQ.cache
docs/: index.md
docs/Prep/: Chicken Thighs.md  Chili de Arbol Hot Sauce.md  Mexican Crema.md  Pickled Onions.md  Vegetable Broth.md
docs/Recipes/Appetizers/: German Potato Salad.md
docs/Recipes/Breakfast/: Dutch Babies.md
docs/Recipes/Dinner/: Shrimp Tacos.md  The Worlds Best Lasagna.md
docs/Recipes/Drinks/: Dharti Martini.md  Wine List.md
docs/Recipes/Salads/: Fattoush Salad.md
docs/Recipes/Soups/: Greek Lemon Chicken Soup.md
docs/Recipes/Sweet Treats/: Best Chocolate Chip Cookies Ever.md
docs/Recipies/Soups/: Greek Lemon Chicken Soup.md
